fix overflowing list texts

--- a/less/c2corg_ui.less
+++ b/less/c2corg_ui.less
@@ -1045,10 +1045,10 @@ input[type=checkbox] + * {
   padding-left:21px;
   height:16px;
   display:inline-block;
-  line-height:16px;
+  line-height: 20px;
   background-repeat:no-repeat;
-  background-position: 0 0;
-  font-size:16px;
+  background-position: 0 1px;
+  font-size:15px;
   vertical-align:middle;
   cursor:pointer;
   background-image:url(../img/checkbox-bg.svg);
@@ -1056,7 +1056,7 @@ input[type=checkbox] + * {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  display: inline-block;
+  display: inline;
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
